blocks/dealer-locator/dealer-locator.css
/* ... */
.dealer-locator ul>li {
    margin-bottom: 0
}

.dealer-locator ul {
    margin-top: 0
}

.dealer-locator ul {
    margin-bottom: 24px
}

.dealer-locator ul>li {
    position: relative
}


.dealer-locator,.dealer-locator,.dealer-locator #map,.dealer-locator .partsasist-form .regForm #select-form #eloquaForm .row {
    overflow: hidden
}

.dealer-locator.search-bar-added {
    height: calc(100% - 9.6em)
}

.dealer-locator {
    width: 100% !important;
    height: calc(100vh - var(--nav-height));
    position: absolute;
    top: var(--nav-height);
    left: 0;
}

@supports (height: 1svh) {
  .dealer-locator {
    height: calc(100svh - var(--nav-height));
  }
}

.dealer-locator input[type=text],
.dealer-locator select,
.dealer-locator textarea {
    display: block;
    width: 100%;
    padding: 10px 40px 10px 15px;
    border: none;
    border-radius: 0;
    background-color: #ebebea;
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none
}

.dealer-locator button {
    font-family: var(--ff-body);
    display: unset;
    box-sizing: unset;
    text-decoration: unset;
    border: unset;
    padding: 1px 6px;
    font-style: unset;
    font-weight: unset;
    cursor: unset;
    color: unset;
    background-color: unset;
    margin: unset;
    white-space: unset;
    overflow: unset;
    text-overflow: unset;
    border-radius: unset;
}

.dealer-locator .sidebar-legend span > div > div {
    display: flex;
    justify-content: space-around;
}

@media (max-width: 992px) {
    .dealer-locator {
        height:calc(100% - 6.1em)!important;
    }
}

.dealer-locator .partsasist-form {
    z-index: 1050;
    display: none;
    display: block;
    position: absolute;
    width: 100%;
    height: 100%
}

.dealer-locator .partsasist-form .backdrop {
    background-color: #fff;
    position: absolute;
    width: 100%;
    height: 100%
}

.dealer-locator .partsasist-form .regForm {
    width: 1200px;
    margin: 0 auto;
    position: relative
}

.dealer-locator .partsasist-form .regForm.rtl-padding {
    padding-top: 25px;
    padding-right: 25px;
    padding-left: 25px
}

.dealer-locator .partsasist-form .regForm #select-form #eloquaForm {
    color: #4d4e53!important
}

.dealer-locator .partsasist-form .regForm #select-form #eloquaForm .field-holder {
    width: 100%
}

.dealer-locator .partsasist-form .regForm .submit-button {
    width: 100%
}

@media (max-width: 991px) {
    .dealer-locator .partsasist-form .regForm {
        width:100%
    }
}

.dealer-locator .datasource-option {
    z-index: 1050;
    display: none;
    display: block;
    position: absolute;
    width: 100%;
    height: 100%
}

.dealer-locator .datasource-option .backdrop {
    background-color: #000;
    opacity: .6;
    position: absolute;
    width: 100%;
    height: 100%
}

.dealer-locator .datasource-option .row {
    text-align: center;
    position: absolute;
    left: 50%;
    top: 50%;
    transform: translate(-50%,-50%);
    width: 600px;
    background-color: #fff;
    height: 350px;
    display: grid;
    align-items: center;
    border: 15px solid #4d4e53
}

@media (max-width: 991px) {
    .dealer-locator .datasource-option .row {
        width:85vw;
        padding: 0;
        margin: 0
    }
}

.dealer-locator .datasource-option .row h3 {
    font-size: 4rem
}

.dealer-locator .datasource-option .row button {
    display: inline-block;
    margin-bottom: 0;
    font-weight: 700;
    text-align: center;
    vertical-align: middle;
    touch-action: manipulation;
    cursor: pointer;
    background-image: none;
    border: 2px solid #4d4e53;
    white-space: nowrap;
    padding: 12px 32px;
    font-size: 16px;
    line-height: 1.5;
    border-radius: 0;
    user-select: none;
    user-select: none;
    color: #4d4e53;
    background-color: #FFF
}

@media all and (-ms-high-contrast:none),(-ms-high-contrast:active) {
    .dealer-locator .datasource-option .row {
        padding-top: 50px
    }
}

.dealer-locator *,.dealer-locator ::after,.dealer-locator ::before {
    box-sizing: initial
}

.dealer-locator .tooltip {
    position: relative;
    display: inline-block;
    opacity: 1
}

.dealer-locator .tooltip .tooltiptext {
    visibility: hidden;
    font-family: Arial,sans-serif;
    width: 120px;
    background-color: #000;
    font-size: 12px;
    color: #fff;
    text-align: center;
    padding: 5px 0;
    border-radius: 6px;
    text-transform: none;
    position: absolute;
    z-index: 150;
    top: 100%;
    left: 50%;
    margin-left: -60px
}

.dealer-locator .tooltip .tooltiptext.cancel {
    left: -9%
}

.dealer-locator .tooltip .tooltiptext.cancel::after {
    top: -13px;
    left: 83%;
    margin-left: -20.5px
}

.dealer-locator .tooltip .tooltiptext.copy {
    margin-left: -110px;
    top: 30px
}

.dealer-locator .tooltip .tooltiptext.link {
    margin-left: -110px;
    top: 20px
}

.dealer-locator .tooltip .tooltiptext.geo,.dealer-locator .tooltip .tooltiptext.mydealer {
    margin-left: -105px;
    top: 35px
}

.dealer-locator .tooltip .tooltiptext.removepin {
    margin-left: 0
}

.dealer-locator .tooltip:hover .tooltiptext {
    visibility: visible
}

.dealer-locator .main-directions .go-back button {
    background: 0 0;
    cursor: pointer;
    border: 1px solid #000;
    font-size: 14px;
    padding: 6px;
    margin-bottom: 10px;
    opacity: .8
}

.dealer-locator .main-directions .go-back button:hover {
    opacity: 1;
    background-color: #e6e6e6;
    border: 1px solid transparent
}

.dealer-locator .select-directions {
    display: inline-block;
    text-align: right;
    width: 90%
}

.dealer-locator .select-directions .go-back button {
    background: 0 0;
    cursor: pointer;
    border: 1px solid #000;
    font-size: 14px;
    padding: 6px;
    margin-bottom: 10px;
    opacity: .8
}

.dealer-locator .select-directions .go-back button:hover {
    opacity: 1;
    background-color: #e6e6e6;
    border: 1px solid transparent
}
/* ... */

